[gd_scene load_steps=4 format=3 uid="uid://bb2x01h8jexm5"]

[ext_resource type="Script" path="res://scripts/boarding/soldier_npc.gd" id="1_soldier"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_body"]
size = Vector2(24, 36)

[sub_resource type="CircleShape2D" id="CircleShape2D_vision"]
radius = 300.0

[node name="SoldierNPC" type="CharacterBody2D"]
collision_layer = 4
collision_mask = 3
script = ExtResource("1_soldier")

[node name="Sprite2D" type="Node2D" parent="."]

[node name="Body" type="ColorRect" parent="Sprite2D"]
offset_left = -8.0
offset_top = -12.0
offset_right = 8.0
offset_bottom = 12.0
color = Color(0.6, 0.2, 0.2, 1)

[node name="Helmet" type="ColorRect" parent="Sprite2D"]
offset_left = -6.0
offset_top = -10.0
offset_right = 6.0
offset_bottom = -4.0
color = Color(0.3, 0.15, 0.15, 1)

[node name="Visor" type="ColorRect" parent="Sprite2D"]
offset_left = -5.0
offset_top = -9.0
offset_right = 5.0
offset_bottom = -5.0
color = Color(0.8, 0.2, 0.2, 1)

[node name="Armor" type="ColorRect" parent="Sprite2D"]
offset_left = -7.0
offset_top = -2.0
offset_right = 7.0
offset_bottom = 8.0
color = Color(0.4, 0.15, 0.15, 1)

[node name="Weapon" type="ColorRect" parent="Sprite2D"]
offset_left = 6.0
offset_top = -2.0
offset_right = 16.0
offset_bottom = 2.0
color = Color(0.3, 0.3, 0.35, 1)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_body")

[node name="VisionRaycast" type="RayCast2D" parent="."]
target_position = Vector2(300, 0)
collision_mask = 3

[node name="VisionArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="VisionArea"]
shape = SubResource("CircleShape2D_vision")

[node name="AlertIndicator" type="Node2D" parent="."]
position = Vector2(0, -25)
visible = false

[node name="Icon" type="ColorRect" parent="AlertIndicator"]
offset_left = -6.0
offset_top = -6.0
offset_right = 6.0
offset_bottom = 6.0
color = Color(1, 0, 0, 1)

[node name="Exclamation" type="Label" parent="AlertIndicator"]
offset_left = -4.0
offset_top = -8.0
offset_right = 4.0
offset_bottom = 8.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 14
text = "!"
horizontal_alignment = 1
vertical_alignment = 1
